coded utOrderItem and utOrderTests. Coded MovieController and added sidebar

--- a/GV.DVDCentral.UI/Views/Shared/_Layout.cshtml
+++ b/GV.DVDCentral.UI/Views/Shared/_Layout.cshtml
@@ -29,18 +29,51 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Rating" asp-action="Index">Rating</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Genre" asp-action="Index">Genres</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Director" asp-action="Index">Directors</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Format" asp-action="Index">Formats</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Movie" asp-action="Index">Movies</a>
+                        </li>
+
+
+
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+
+    <div class="container-fluid">
+        <div class="row">
+
+            <div class="col-md-2 sidebar rounded-top">
+                <div class="header rounded-top p-2">
+                    <h4>Genres</h4>
+                </div>
+                <div>
+                    @await Component.InvokeAsync("Sidebar")
+                </div>
+
+            </div>
+
+            <div class="col-md-9 main body-content rounded-top">
+                <div class="header rounded-top p-2">
+                    <h4>@ViewBag.Title</h4>
+                </div>
+                <main role="main" class="pb-3">
+                    <div class="text-danger">@ViewBag.Error</div>
+                    @RenderBody()
+                </main>
+            </div>
+        </div>
     </div>
+
 
     <footer class="border-top footer text-muted">
         <div class="container">
