code header styles and changed views

--- a/GV.DVDCentral.UI/Views/Genre/Index.cshtml
+++ b/GV.DVDCentral.UI/Views/Genre/Index.cshtml
@@ -1,13 +1,10 @@
 ﻿@model IEnumerable<GV.DVDCentral.BL.Models.Genre>
 
 @{
-    ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
-
-<p>
+<p class="m-2">
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
