--- a/GV.DVDCentral.UI/Views/Movie/Index.cshtml
+++ b/GV.DVDCentral.UI/Views/Movie/Index.cshtml
@@ -1,50 +1,29 @@
 ﻿@model IEnumerable<GV.DVDCentral.BL.Models.Movie>
 
 @{
-    ViewData["Title"] = "Index";
+
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
 
-<p>
+
+<p class="m-2">
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Cost)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RatingId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FormatId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DirectorId)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.InStkQty)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImagePath)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.DirectorFullName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Quantity)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Rating)
@@ -59,37 +38,17 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Cost)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RatingId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FormatId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DirectorId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.InStkQty)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImagePath)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.DirectorFullName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Rating)
