--- a/GV.DVDCentral.UI/Views/Format/Index.cshtml
+++ b/GV.DVDCentral.UI/Views/Format/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<GV.DVDCentral.BL.Models.Format>
 
 @{
-    ViewData["Title"] = "Index";
+
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
 
-<p>
+
+<p class="m-2">
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
