added returnURL logic and  a bunch of other stuff

--- a/GV.DVDCentral.UI/Views/Shared/Components/Sidebar/Default.cshtml
+++ b/GV.DVDCentral.UI/Views/Shared/Components/Sidebar/Default.cshtml
@@ -14,4 +14,11 @@
         <a asp-controller="Movie"
            asp-action="Index">All</a>
     </li>
+
+    <li><a asp-controller="User" asp-action="Login">Login</a> </li>
+    <li><a asp-controller="User" asp-action="Logout">Logout</a> </li>
+
+    <li><a asp-controller="User" asp-action="Browse2" >My user information</a></li>
+
+
 </ul>
