--- a/GV.DVDCentral.UI/Views/Shared/_Layout.cshtml
+++ b/GV.DVDCentral.UI/Views/Shared/_Layout.cshtml
@@ -47,37 +47,40 @@
                         </li>
                     </ul>
 
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            @{
-                                GV.DVDCentral.BL.UserManager.Seed();
-                                var fullname = HttpContextAccessor.HttpContext?.Session.GetString("fullname");
-                                if (fullname != null) fullname = fullname.Replace("\"", "");
 
 
-                               
-                            }
+                    <div class="dropBtnColor navbar-nav ms-auto">
+                        <div class="nav-item dropdown">
+                            <a class="text-light btn btn-secondary dropdown-toggle"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Let's Get Started
+                            </a>
 
-                            <a class="nav-link text-light">@fullname</a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item">
+                                    @{
+                                        GV.DVDCentral.BL.UserManager.Seed();
+                                        var fullname = HttpContextAccessor.HttpContext?.Session.GetString("fullname");
+                                        if (fullname != null) fullname = fullname.Replace("\"", "");
+                                    }
 
-                        </li>
+                                    <a class="dropdown-item nav-link">@fullname</a>
+                                </li>
 
-                        <li class="nav-item">
-                            @if (HttpContextAccessor.HttpContext?.Session.GetObject<User>("user") != null) // if the user is not in session show the links
-                            {
-                                <a asp-controller="User" asp-action="Logout" class="nav-link text-light">Logout</a>
-                                <a asp-controller="User" asp-action="Browse2" class="nav-link text-light">My user information</a>
+                                <li class="nav-item">
+                                    @if (HttpContextAccessor.HttpContext?.Session.GetObject<User>("user") != null)
+                                    {
+                                        <a asp-controller="User" asp-action="Logout" class="dropdown-item nav-link ">Logout</a>
+                                        <a asp-controller="User" asp-action="Browse2" class="dropdown-item nav-link">My user information</a>
+                                    }
+                                    else
+                                    {
+                                        <a asp-controller="User" asp-action="Login" class="dropdown-item nav-link ">Login</a>
+                                    }
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
 
-                            }
-                            else
-                            {
-
-                                <a asp-controller="User" asp-action="Login" class="nav-link text-light">Login</a> 
-
-                            }
-                        </li>
-
-                    </ul>
                 </div>
             </div>
         </nav>
